[tool.poetry]
name = "biased-mppi"
version = "0.1.0"
description = ""
authors = ["eliatrevisan <elia.trv@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
mppi-torch = {git = "https://github.com/tud-airlab/mppi_torch.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
